# MOBO-Kit

./: .gitattributes  .gitignore  COLAB_INSTALL.md  ENV_SETUP_README.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  simple_gp_test.py  synthetic_test.py
Data Visualization/: 20221028 - MOBO Vectors.pptx
LHS/: PerovScaleup_Round0_Initial_Sampling_FOM_MIT_g2g_v2.ipynb  PerovScaleup_Round0_Initial_Sampling_FOM_MIT_g2g_v3.ipynb
MOBO/: R0 Summary for MOBO R1 conditions.csv  UW-MIT FOM MOBO-Copy4.ipynb  UW-MIT FOM MOBO.ipynb
configs/: auto_config.yaml  example_inputs.yaml  example_py310_gpu.yaml
data/: batch0_results.csv
data/processed/: R0+R1 full results-1.csv  batch0_results.csv  configCSV_example.csv
notebooks/: 01_initial_sampling.ipynb  02_mobo_rounds.ipynb  MOBO_demo_annotated.ipynb  PerovScaleup_Round0_Initial_Sampling_FOM_MIT_g2g_v3.ipynb  UW-MIT FOM MOBO-Copy6.ipynb
results/: R0 Summary for MOBO R1 conditions.csv
results/demo/: batch_1.csv
results/experiment/: next_batch.csv
src/: acquisition.py  cli.py  constraints.py  data.py  design.py  lhs.py  main.py  metrics.py  model.py  models.py  plotting.py  run_pipeline.py  utils.py
src/mobo_kit/: acquisition.py  cli.py  main.py  models.py  plotting.py
tests/: smoke_test.py  synthetic_test.py  test_acquisition.py  test_design  test_design.py  test_main  test_main.py  test_models.py  test_plotting.py
unsorted/: PerovScaleup_Round0_Initial_Sampling_FOM_MIT_g2g_v2.ipynb
